# aiosubpub

./: .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  aiosubpub.py  noxfile.py  pubsub.py  pyproject.toml  readme.md  requirements_dev.txt  setup.cfg
.github/workflows/: main.yaml
aiosubpub/: __init__.py  aiosubpub.py
tests/: test_pubsub.py
