[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "aiosubpub"
author = "Sander Teunissen"
author-email = "no_mail@nomail.com"
home-page = "https://github.com/sander76/pubsub"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python=">=3.6"
