[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "aiosubpub"
description-file = "readme.md"
author = "Sander Teunissen"
author-email = "no_mail@nomail.com"
home-page = "https://github.com/sander76/pubsub"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python=">=3.7"

[tool.flit.metadata.requires-extra]
test = ["pytest==5.3.5", "pytest-asyncio==0.10.0"]
dev = ["pytest-cov", "coverage[toml]>=5.0.3", "pre-commit"]
